force-app/main/default/objects/Stock_x_Ciclo__c/Stock_x_Ciclo__c.object-meta.xml
<CustomObject>
    <label>Stock x Ciclo</label>
    <nameField>
        <displayFormat>SXC-{0000}</displayFormat>
        <label>Stock x Ciclo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock x Ciclo</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>