force-app/main/default/objects/Stock_x_Ciclo__c/fields/Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Ciclo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciclo</label>
    <referenceTo>VisMed_Ciclo__c</referenceTo>
    <relationshipLabel>Stock x Ciclo</relationshipLabel>
    <relationshipName>Stock_x_Ciclo</relationshipName>
    <type>Lookup</type>
</CustomField>