force-app/main/default/objects/Stock_x_Ciclo__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>Ciclo__r.Numero_de_mes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>