force-app/main/default/objects/Stock_x_Ciclo__c/fields/VisMed_JefeDeSupervisor__c.field-meta.xml
<CustomField>
    <fullName>VisMed_JefeDeSupervisor__c</fullName>
    <formula>APM__r.Owner.Manager.Manager.FirstName + &apos; &apos; + APM__r.Owner.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe de Supervisor</label>
    <type>Text</type>
</CustomField>