force-app/main/default/objects/Stock_x_Ciclo__c/fields/VisMEd_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>VisMEd_Supervisor__c</fullName>
    <formula>APM__r.Owner.Manager.FirstName + &apos; &apos; +  APM__r.Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor</label>
    <type>Text</type>
</CustomField>