force-app/main/default/objects/Stock_x_Ciclo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APM__c</columns>
    <columns>Ciclo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Anio__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>